--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,22 +1,26 @@
-*{
-    font-family: Arial, Helvetica, sans-serif
-}
-.header{
-    background-color: #415a77;
-    height: 100px;
-    width: 100%;
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-    background-color: #1b263b ;
+    background-color: #1b263b;
     margin: 10px;
 }
 
-h1{
+.header {
+    background-color: #415a77;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+h1 {
     background-color: #778da9;
     color: white;
     width: 300px;
@@ -27,29 +31,18 @@ h1{
     border-radius: 0px 10px 10px 0px;
 }
 
-nav {
-    padding: 0;
-    margin: 0;
-}
-
-nav div {
-    margin-right: 5px;
-    display: inline;
-}
-
-nav div a{
+nav a {
     color: whitesmoke;
     font-size: 14px;
     font-weight: 800;
-    margin-right: 8px;
+    margin-right: 15px;
     text-decoration: underline;
     text-underline-offset: 4px;
     text-shadow: 3px 3px 6px #778da9;
-    display: inline;
 }
 
 .subheading {
-position: relative;
+    position: relative;
 }
 
 .subheading img {
@@ -58,7 +51,7 @@ position: relative;
     opacity: 0.5;
 }
 
-.subheading-position{
+.subheading-position {
     position: absolute;
     bottom: 8px;
     right: 16px;
@@ -71,165 +64,119 @@ position: relative;
     text-align: center;
 }
 
-#about {
-    position: relative;
-    width: 100%;
+#about, #contact, #skills {
+    padding: 40px 20px;
 }
 
-#about h2 {
+#about h2, #contact h2, #skills h2 {
     color: white;
-    font-size: 50px;
-    text-align: end;
+    font-size: 36px;
+    margin-bottom: 20px;
+    border-bottom: 3px solid #778da9;
+    padding-bottom: 10px;
+}
+
+#about p {
+    color: white;
+    font-size: 16px;
+    line-height: 1.6;
+    max-width: 800px;
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.project {
+    background-color: #415a77;
+    border: 2px solid #778da9;
+    border-radius: 10px;
+    padding: 20px;
+    color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.project h3 {
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.project p {
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.project a {
     display: inline-block;
-    vertical-align: top;
-    border-right: 5px solid #778da9;
-    margin: 30px 10px 0 0;
-    padding:10px 10px 40px 0px;
-    width: 15%;
-}
-
-#about p{
-    color: white;
-    display: inline-block;
-    vertical-align: top;
-    width: 75%;
-    margin-top: 60px;
-    line-height: 20px;
-}
-#about p::first-letter {
-    font-size: 30px;
-    font-weight: bolder;
-    text-shadow: 5px black;
-}
-
-#work-container {
-    display: flex;
-    flex-wrap: wrap; 
-    align-content: start;
-    margin-top: 60px;
-    width: 100%;
-    text-align: end;
-}
-
-#work-container h2 {
-    color: white;
-    border-right: 5px solid #778da9;
-    font-size: 50px;
-    padding: 10px 10px 40px 0px;
-    width: 15%;
-   
-}
-.work-buttons {
-    flex: 0 0 calc(50% - 10px);
-    justify-content: space-between;
-    width: 100%;
-}
-
-.work-buttons img {
-    border: 5px solid #778da9;
-    box-shadow: 0px 4px 8px #778da9;
-}
-    
-#top-img {
-    height: 300px;
-    width: 1000px;
-    margin: 60px 0 10px 20px;
- }
-
- .block-img1 {
-    width: 450px;
-    height: 100px;
-    margin: 10px -5px 10px 0px;
- }
- .block-img2 {
-    width: 450px;
-    height: 100px;
-    margin: 10px 140px 0 0;
- }
- .block-img3 {
-    width: 450px;
-    height: 100px;
-    margin: 10px -5px 0px 0;
- }
- .block-img4 {
-    width: 450px;
-    height: 100px;
-    margin: 10px 140px 0 0;
- }
-.work-title h3 {
-    color: white;
+    padding: 8px 12px;
     background-color: #778da9;
-    width: 100px;
-    height: 50px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}  
-#surf-report {
-    font-size: 30px;
-    width: 130px;
-    height: 75px;
-    top: 99%;
-    left: 18%;
-    position: absolute;
-}
-#led-wall {
-    top: 121%;
-    left: 18%;
-    position: absolute;
-}
-#calculator {
-    top: 121%;
-    right: 36.5%;
-    position: absolute;
-}
-
-#pastel-puzzles {
-    top: 138%;
-    left: 18%;
-    position: absolute;
-}
-#running-buddy {
-    top: 138%;
-    right: 36.5%;
-    position: absolute;
-}
-
-#contact{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-}
-#contact h2 {
     color: white;
-    font-size: 50px;
-    text-align: end;
-    display: inline-block;
-    vertical-align: top;
-    border-right: 5px solid #778da9;
-    margin: 30px 10px 0 0;
-    padding:10px 10px 40px 0px;
-    width: 15%;
-}
-#contact ul {
-    color: white;
-    font-size: 25px;
-    font-weight: bold;
-    display: flex;
-    vertical-align: top;
-    width: 90%;
-    margin-top: 60px;
-    line-height: 20px;
-    list-style-type: none;
-    margin-right: 5px;
-
-}
-.contact-info {
-    display: inline;
+    border-radius: 5px;
     text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+.project a:hover {
+    background-color: #415a77;
+}
+
+#skills ul {
     color: white;
+    font-size: 16px;
+    list-style-type: square;
+    padding-left: 20px;
+    max-width: 600px;
+}
+
+#contact ul {
+    list-style: none;
+    padding-left: 0;
+    font-size: 16px;
+    color: white;
+}
+
+#contact li {
+    margin-bottom: 10px;
+}
+
+#contact a {
+    color: #f1f1f1;
+    text-decoration: none;
     border-bottom: 2px solid #778da9;
-    margin-right: 80px;
+    padding-bottom: 2px;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    color: #ccc;
+    font-size: 14px;
+    background-color: #1b263b;
+    border-top: 1px solid #778da9;
+}
+
+@media (max-width: 600px) {
+    h1 {
+        width: auto;
+        font-size: 24px;
+    }
+
+    .subheading-position {
+        font-size: 18px;
+    }
+
+    nav a {
+        font-size: 12px;
+    }
+
+    #about h2, #contact h2, #skills h2 {
+        font-size: 28px;
+    }
+
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
 }
